src/test/resources/testcases/invalid/variables/self_initialization.tc
int main() {
    int x = x + 1; // Error: 'x' referenced before its declaration statement finishes
    return 0;
}
